--- a/src/components/main.css
+++ b/src/components/main.css
@@ -11,8 +11,9 @@ input{
     background-color: rgba(2, 1, 31, 0.250);
     color: white;
     border-color: orangered ;
-    padding: 8px;
-    border-width: 4px;
+    padding: 18px;
+    width: 37%;
+    border-width: 8px;
     border-style: solid;
     border-top-left-radius: 21px;
     border-bottom-left-radius: 21px;
@@ -24,9 +25,9 @@ input{
     background-color: orangered;
     border: none;
     border-top-right-radius: 21px;
-    padding: 12px;
+    padding: 26px;
     border-bottom-right-radius: 21px;
-    padding-right: 15px;
+    padding-right: 28px;
 }
 
 .todoItem{
